--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         uses:
           Cr1t-GYM/jenkins-action-poc/jenkins-plugin-installation-action@master
         with:
-          pluginstxt: jenkins-setup/plugins.txt
+          pluginstxt: plugins.txt
       - name: Run Jenkins pipeline
         id: run_jenkins_pipeline
         uses:
